--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -7,12 +7,12 @@
 <!-- main section starts here -->
 <div class="container">
     <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5 top-spacing margin-top-40">
-           <!--  -->
+        <div class="col-md-3"></div>
+        <div class="col-md-6 top-spacing margin-top-40">
+            <!--  -->
             <p class="sub-text light-text mob-margin-bottom-3">RESERVATION #{{confirmationNumber}}</p>
             <p class="main-text mob-margin-bottom-3" ng-hide="ShowupgradedLabel">
-                YOUR STAY DETAILS
+                YOUR STAY
             </p>
             <p class="main-text mob-margin-bottom-3" ng-show="ShowupgradedLabel">
                 YOUR NEW STAY DETAILS
@@ -32,7 +32,7 @@
                             DEPARTURE
                         </div>
                         <div class="res-date">
-                         {{reservationData.departure_date}}
+                            {{reservationData.departure_date}}
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         RATE
                     </div>
                     <div class="res-date">
-                     {{reservationData.room_rate}}
+                        {{reservationData.room_rate}}
                     </div>
                 </div>
             </div>
@@ -67,52 +67,32 @@
                     </div>
                 </div>
             </div>
-             <div class="row margin-top-10 mob-margin-top-3" ng-if="isAddonUpsellActive && reservationData.addons_data.length > 0 ">
+            <div class="row margin-top-10 mob-margin-top-3" ng-if="isAddonUpsellActive && reservationData.addons_data.length > 0 ">
                 <div class="col-xs-12 left-align">
                     <div class="res-details-heading">
                         ENHANCEMENTS
                     </div>
                     <div class="res-date">
                         <ul>
-                        <li ng-repeat="addon in reservationData.addons_data" class="left-align">{{addon.name}}</li>
+                            <li ng-repeat="addon in reservationData.addons_data" class="left-align">{{addon.name}}</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <br>
-
-            <div class="row applycharge margin-top-10 mob-margin-top-3">
+            <div class="margin-top-10 mob-margin-top-3">
                 <div class="col-xs-12 left-align">
                     <input type="checkbox" ng-click="termsClicked()" ng-model="checked"  class="accept-checkbox" ng-checked="checkedApplyCharges">
                     <span class="footer-sub-text left-margin-10">I ACCEPT ALL TERMS AND CONDITIONS</span>
                 </div>
-            </div>
-            <div class="row margin-top-10 hide-in-mobile">
-                <div class="col-xs-12 left-align">
-                    <div class="footer-sub-text">
-                        QUESTIONS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
-                    </div>
+                <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()">NEXT</a>
+                <div class="footer-sub-text margin-top-10">
+                    QUESTIONS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
                 </div>
             </div>
-        <!--  -->
         </div>
-        <div class="col-md-2 top-spacing">
-        	<div class="vertical-line vertical-line-long">&nbsp;</div>
+        <div class="col-md-3">
         </div>
-         <div class="col-md-3 lonely-btn margin-top-20">
-             <center>
-                 <a class="btn btn-template margin-top-10" ng-click="checkInButtonClicked()">NEXT</a>
-             </center>
-        </div>
-        <div class="col-md-1">
-        </div> 
-        <div class="margin-top-10 hide-in-desktop">
-                <div class="col-xs-12 left-align">
-                    <div class="footer-sub-text">
-                        QUESTIONS? <a href="tel:{{hotelPhone}}"><u class="phone-label">CALL US AT  {{hotelPhone}}.</u></a>
-                    </div>
-                </div>
-        </div>                    
     </div>
 </div>
 <!-- terms starts here -->
