--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -20,7 +20,7 @@
             <div class="margin-top-40 mob-padding-bottom-3 bottom-border">
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="res-details-heading">
+                        <div class="res-date">
                             ARRIVAL
                         </div>
                         <div class="res-date">
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="col-xs-6">
-                        <div class="res-details-heading">
+                        <div class="res-date">
                             DEPARTURE
                         </div>
                         <div class="res-date">
@@ -37,10 +37,10 @@
                     </div>
                 </div>
             </div>
-            <div class="row margin-top-20 mob-margin-top-3">
+            <div class="row margin-top-20">
                 <div class="col-xs-12 left-align">
-                    <div class="res-details-heading">
-                        ROOM TYPE <span class="upgrades-label" ng-show="ShowupgradedLabel">UPGRADED!</span>
+                    <div class="res-date">
+                        ROOM <span class="upgrades-label" ng-show="ShowupgradedLabel">UPGRADED!</span>
                     </div>
                     <div class="res-date">
                         {{reservationData.room_type}}
@@ -49,7 +49,7 @@
             </div>
             <div class="row margin-top-10 mob-margin-top-3">
                 <div class="col-xs-12 left-align">
-                    <div class="res-details-heading">
+                    <div class="res-date">
                         RATE
                     </div>
                     <div class="res-date">
@@ -59,7 +59,7 @@
             </div>
             <div class="row margin-top-10 mob-margin-top-3">
                 <div class="col-xs-12 left-align">
-                    <div class="res-details-heading">
+                    <div class="res-date">
                         AVERAGE RATE PER NIGHT
                     </div>
                     <div class="res-date">
