--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckout.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckout.html
@@ -7,19 +7,15 @@
 <!-- main section starts here -->
 <div class="container">
     <div class="row">
-        <div class="col-md-1"></div>
+        <div class="col-md-3"></div>
         <!-- left side -->
-        <div class="col-md-4 top-spacing">
+        <div class="col-md-6 top-spacing">
             
             <p class="sub-main-text">{{checkoutTimessage}} {{checkoutTime}}.</p>
-        </div>
-        <div class="col-md-1"></div>
-        <!-- right side -->
-        <div class="col-md-3 sm-no-top-spacing no-side-padding">
             <a class="btn checkout-btn" ui-sref="checkoutBalance">
-                <div class="pull-left">Check out now</div>
+                <div>Check out now</div>
                 <br class="hide-in-desktop"/>
-                <div class="checkout-icon checkout-alone-button">
+                <div class="checkout-icon">
                 </div>
             </a>
         </div>
