--- a/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
@@ -1,17 +1,7 @@
 <!-- header -->
 <div class="container-fluid padding-0">
-    <div class="row header-bar ng-scope">
-        <div class="col-xs-2 padding-2">&nbsp;
-            <a ui-sref="checkOutOptions">
-                <div class="half-widh pull-left back-to-checkout">
-                </div>
-                <span class="sub-main-text pull-right hide-in-mobile back-text">back</span>
-            </a>
-        </div>
-        <div class="col-xs-8">
-            <img alt="" class="logo-image" src="{{hotelLogo}}"/>
-        </div>
-        <div class="col-xs-2"></div>
+   <div class="row header-bar">
+        <img alt="" class="logo-image" src="{{hotelLogo}}"/>
     </div>
 </div>
 <!-- main section starts here -->
@@ -37,14 +27,11 @@
     </div>
     <!-- options -->
     <div class="row" ng-hide="isFetching || netWorkError">
-        <div class="col-md-2"></div>
+        <div class="col-md-3"></div>
         <!-- left side -->
-        <div class="col-md-4 top-spacing">
+        <div class="col-md-6 top-spacing">
             <p class="main-text text-left">Please choose your new<br>check out time:</p>
-        </div>
-       <!-- right side -->
-        <div class="col-md-5 top-spacing mob-no-padding">
-            <div class="row options-container">
+            <div class="row options-container margin-top-10">
              <a class="btn triple-button one-third-width {{ charge.class }}" ng-repeat="charge in charges" ng-click="gotToNextStep(charge.amount,charge.id)">
                  <div class="row">
                         <div class="circle-bg">
@@ -68,6 +55,6 @@
              <a class="no-thanks" ui-sref="checkOutOptions">No, thank you.</a>
             </div>
         </div>  
-        <div class="col-md-1"></div>               
+        <div class="col-md-3"></div>               
     </div>
 </div>
