fixing style issues

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -90,6 +90,14 @@ a:hover,
 .error-text {
     color: #363d40;
 }
+.black-button,.black-button:hover{
+    background:#000 !important;
+    color:#fff !important;   
+}
+.white-button,.white-button:hover{
+    color:#000 !important;
+    background:#fff !important;   
+}
 
 .view-bill {
     color: #363d40;
