minor color change

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -98,6 +98,10 @@ a:hover,
     color:#000 !important;
     background:#fff !important;   
 }
+.grey-btn, .grey-btn:hover {
+    background: #fff !important;
+    color: #000 !important;
+}
 
 .view-bill {
     color: #363d40;
