fixing html alignments

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -98,11 +98,9 @@ a:hover,
     color:#000 !important;
     background:#fff !important;   
 }
-.grey-btn, .grey-btn:hover {
-    background: #fff !important;
-    color: #000 !important;
+textarea{
+    border: 1px solid black;  
 }
-
 .view-bill {
     color: #363d40;
 }
