--- a/guestweb/common_templates/partials/public_ny_v2/gwLateCheckoutfinal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLateCheckoutfinal.html
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <div class="container-fluid padding-0">
     <div class="row header-bar">
-        <img alt="" class="logo-image" src="{{hotelLogo}}"/>
+        <img alt="" class="logo-image" src="{{hotelLogo}}" />
     </div>
 </div>
 <!-- main section starts here -->
@@ -10,8 +10,7 @@
     <div class="row" ng-hide="posted || netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="request-text">Your request is being processed.
-            This may take a few seconds..... please wait!</p>
+            <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
         </div>
         <div class="col-md-2">
         </div>
@@ -30,10 +29,8 @@
         <div class="col-md-3"></div>
         <!-- left side -->
         <div class="col-md-6 top-spacing">
-            
             <p class="sub-main-text text-left">Thank you for purchasing Late Check-out.
             </p>
-            
             <p class="sub-main-text text-left">
                 <em>Your room keys are set to expire at {{oldCheckoutTime}}. Please see a Public Advisor to re-activate your keys for the late checkout time selected. </em>
             </p>
