--- a/guestweb/common_templates/partials/public_ny_v2/gwBill.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwBill.html
@@ -1,40 +1,40 @@
-
 <!-- navbar -->
 <div class="container-fluid padding-0">
     <div class="row header-bar">
-        <img alt="" class="logo-image" src="{{hotelLogo}}"/>
+        <img alt="" class="logo-image" src="{{hotelLogo}}" />
     </div>
 </div>
-
 <!-- main section starts here -->
 <div class="container">
     <!-- request -->
-     <div class="row" ng-show="isFetching && !netWorkError">
+    <div class="row" ng-show="isFetching && !netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="request-text">Your request is being processed.
-            This may take a few seconds..... please wait!</p>
+            <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
     <!-- error -->
     <div class="row" ng-show="netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="error-text">Our apologies, something went wrong, please complete your check-out at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}"class="phone-text">{{hotelPhone}}.</a></p>
+            <p class="error-text">Our apologies, something went wrong, please complete your check-out at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a></p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
     <!-- main content -->
     <div class="row" ng-hide="isFetching || netWorkError">
         <div class="col-md-1"></div>
         <div class="col-md-4 top-spacing">
-            <div class="col-md-4"></div><p class="main-text">Check-Out</p>
-            <div class="col-md-4"></div><p class="sub-main-text">Your balance is</p>
-            <div class="col-md-4"></div><p class="balance-amount">{{currencySymbol}}{{billData.balance}}</p>
-            <div class="view-bill" ng-hide="showBill"  ng-click="showBill = true">
+            <div class="col-md-4"></div>
+            <p class="main-text">Check-Out</p>
+            <div class="col-md-4"></div>
+            <p class="sub-main-text">Your balance is</p>
+            <div class="col-md-4"></div>
+            <p class="balance-amount">{{currencySymbol}}{{billData.balance}}</p>
+            <div class="view-bill" ng-hide="showBill" ng-click="showBill = true">
                 <div class="right-arrow-button"></div>VIEW BILL
             </div>
             <div class="view-bill" ng-show="showBill" ng-click="showBill = false">
@@ -42,7 +42,7 @@
             </div>
         </div>
         <!--  bill content -->
-        <div class="show-bill-wrap" ng-show="showBill" >
+        <div class="show-bill-wrap" ng-show="showBill">
             <div class="overlay-bg">
                 <div class="show-bill">
                     <div class="bill-contain-wrap">
@@ -63,7 +63,7 @@
                                         <th>Fees</th>
                                     </tr>
                                 </thead>
-                                <tbody ng-repeat= "bill in billData.fee_details" >
+                                <tbody ng-repeat="bill in billData.fee_details">
                                     <tr>
                                         <td>
                                             <span>{{ bill.date }}</span>
@@ -72,7 +72,7 @@
                                         </td>
                                     </tr>
                                     <tr ng-show="{{bill.guest_room_text.length > 0}}">
-                                        <td >
+                                        <td>
                                             <span>{{ bill.guest_room_text}}:<span>{{bill.guest_room_description}}</span></span>
                                         </td>
                                         <td>
@@ -89,39 +89,40 @@
                                     </tr>
                                 </tbody>
                                 <tfoot>
-                                        <tr class="total">
-                                            <td>TOTAL</td>
-                                            <td>{{billData.total_fees}}</td>
-                                        </tr>
-                                        <tr class="total">
-                                            <td>CREDIT</td>
-                                            <td>{{billData.credits}}</td>
-                                        </tr>
-                                        <tr class="total">
-                                            <td>BALANCE</td>
-                                            <td class="balance">{{billData.balance}}</td>
-                                        </tr>
-                                </tfoot>    
+                                    <tr class="total">
+                                        <td>TOTAL</td>
+                                        <td>{{billData.total_fees}}</td>
+                                    </tr>
+                                    <tr class="total">
+                                        <td>CREDIT</td>
+                                        <td>{{billData.credits}}</td>
+                                    </tr>
+                                    <tr class="total">
+                                        <td>BALANCE</td>
+                                        <td class="balance">{{billData.balance}}</td>
+                                    </tr>
+                                </tfoot>
                             </table>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>  
+        </div>
         <!--  bill content ends here-->
         <div class="col-md-1"></div>
         <div class="col-md-5 top-spacing sm-no-top-spacing margin-top-10">
-                 <a class="btn accept-charges" ng-click="gotToNextStep()">
-                 <div class="">Accept charges <br>and check out</div>
-                 <div class="sm-icon margin-top-10">
-                     <div class="accept-charge-icon">&nbsp;</div>
-                 </div>
-                </a>
+            <a class="btn accept-charges" ng-click="gotToNextStep()">
+                <div class="">Accept charges
+                    <br>and check out</div>
+                <div class="sm-icon margin-top-10">
+                    <div class="accept-charge-icon">&nbsp;</div>
+                </div>
+            </a>
         </div>
         <div class="col-md-1">
-        </div>                   
+        </div>
     </div>
     <div class="row footer-text" ng-hide="isFetching || netWorkError">
-            The credit card on record will be charged.
+        The credit card on record will be charged.
     </div>
 </div>
