--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckoutfinal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckoutfinal.html
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <div class="container-fluid padding-0">
     <div class="row header-bar">
-        <img alt="" class="logo-image" src="{{hotelLogo}}"/>
+        <img alt="" class="logo-image" src="{{hotelLogo}}" />
     </div>
 </div>
 <!-- main section starts here -->
@@ -10,11 +10,10 @@
     <div class="row" ng-hide="posted || isCheckoutCompleted || netWorkError || isCheckedout">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="request-text">Your request is being processed.
-            This may take a few seconds..... please wait!</p>
+            <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
     <!-- error message -->
     <div class="row" ng-show="netWorkError">
@@ -23,28 +22,28 @@
             <p class="error-text">Our apologies, something went wrong, please complete your check-out at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a></p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
     <!-- final message -->
     <div class="row" ng-show="posted && success && isCheckoutCompleted && !netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
             <p class="main-text">Thank you for staying with us</p>
-            <p class="sub-main-text">We hope to see you again soon. <br>
-                The Public Team</p>
+            <p class="sub-main-text">We hope to see you again soon.
+                <br> The Public Team</p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
-   <!-- if guest has already checkout -->
+    <!-- if guest has already checkout -->
     <div class="row" ng-show="isCheckedout && !success">
         <div class="col-md-1"></div>
         <div class="col-md-10 top-spacing">
             <p class="main-text">It appears you have already completed your check-out.</p>
-            <p class="sub-main-text">For further enquiries please contact the hotel at <a href="tel: {{hotelPhone}}"  class="phone-text">{{hotelPhone}}.</a></p>
+            <p class="sub-main-text">For further enquiries please contact the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a></p>
             <p class="sub-main-text">Thank You!</p>
         </div>
         <div class="col-md-1">
-        </div>                   
+        </div>
     </div>
 </div>
