--- a/guestweb/common_templates/partials/public_ny_v2/gwDepositPayment.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwDepositPayment.html
@@ -35,8 +35,8 @@
                 <p class="sub-main-text text-left">{{depositAmount}}</p>
             </div>
             <div class="row">
-                    <a class="btn btn-template early-checkin-button margin-top-10" ng-click="payNow()"> Pay {{depositAmount}}</a>
-                    <a class="btn btn-template early-checkin-button margin-top-10 grey-btn" ng-click="cancelActions()">Cancel</a>                
+                <a class="btn btn-template early-checkin-button margin-top-10" ng-click="payNow()"> Pay {{depositAmount}}</a>
+                <a class="btn btn-template early-checkin-button margin-top-10" ng-click="cancelActions()">Cancel</a>
             </div>
         </div>
         <div class="col-md-3"></div>
