--- a/guestweb/common_templates/partials/public_ny_v2/gwEarlyCheckinOptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwEarlyCheckinOptions.html
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <div class="container-fluid padding-0">
     <div class="row header-bar">
-        <img alt="" class="logo-image" src="{{hotelLogo}}"/>
+        <img alt="" class="logo-image" src="{{hotelLogo}}" />
     </div>
 </div>
 <!-- main section starts here -->
@@ -11,11 +11,11 @@
         <div class="col-md-6 top-spacing section-container">
             <p class="main-text">Early Check-in</p>
             <p class="sub-main-text"> We see you are arriving earlier than our standard {{checkinTime}} check in time. Would you like to purchase early check-in for {{earlyCheckinCharge}}?</em>
-	        </p>
-             <a class="btn btn-template early-checkin-button margin-top-10" ng-click="nextButtonClicked()"> Purchase Early Check-in</a>
-             <a class="btn btn-template early-checkin-button margin-top-10 grey-btn" ng-click="changeArrivalTime()"> Change Arrival Time</a>
+            </p>
+            <a class="btn btn-template early-checkin-button margin-top-10" ng-click="nextButtonClicked()"> Purchase Early Check-in</a>
+            <a class="btn btn-template early-checkin-button margin-top-10" ng-click="changeArrivalTime()"> Change Arrival Time</a>
         </div>
         <div class="col-md-3">
-        </div>                   
+        </div>
     </div>
 </div>
