--- a/guestweb/common_templates/partials/public_ny_v2/gwEmailEntry.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwEmailEntry.html
@@ -51,7 +51,7 @@
                 <p class="sub-main-text"> We updated your Guest profile to include this e-mail address: {{guestDetails.email}}</p>
             </div>
             <a class="btn btn-template" ng-click="continueToPrecheckin()" value="Continue">Continue</a>
-            <a class="btn btn-template margin-top-10 grey-btn" ng-click="changeEmail()"> Change Email address</a>
+            <a class="btn btn-template margin-top-10" ng-click="changeEmail()"> Change Email address</a>
         </div>
         <div class="col-md-3">
         </div>
