--- a/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwLatecheckoutoptions.html
@@ -1,7 +1,7 @@
 <!-- header -->
 <div class="container-fluid padding-0">
-   <div class="row header-bar">
-        <img alt="" class="logo-image" src="{{hotelLogo}}"/>
+    <div class="row header-bar">
+        <img alt="" class="logo-image" src="{{hotelLogo}}" />
     </div>
 </div>
 <!-- main section starts here -->
@@ -10,30 +10,30 @@
     <div class="row" ng-show="isFetching && !netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="request-text">Your request is being processed.
-            This may take a few seconds..... please wait!</p>
+            <p class="request-text">Your request is being processed. This may take a few seconds..... please wait!</p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
     <!-- error message -->
     <div class="row" ng-show="netWorkError">
         <div class="col-md-2"></div>
         <div class="col-md-8 top-spacing">
-            <p class="error-text">Our apologies, something went wrong, please complete your check-out at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}"class="phone-text">{{hotelPhone}}.</a></p>
+            <p class="error-text">Our apologies, something went wrong, please complete your check-out at our front desk. You can also call the hotel at <a href="tel: {{hotelPhone}}" class="phone-text">{{hotelPhone}}.</a></p>
         </div>
         <div class="col-md-2">
-        </div>                   
+        </div>
     </div>
     <!-- options -->
     <div class="row" ng-hide="isFetching || netWorkError">
         <div class="col-md-3"></div>
         <!-- left side -->
         <div class="col-md-6 top-spacing">
-            <p class="main-text text-left">Please choose your new<br>check out time:</p>
+            <p class="main-text text-left">Please choose your new
+                <br>check out time:</p>
             <div class="row options-container margin-top-10">
-             <a class="btn triple-button one-third-width {{ charge.class }}" ng-repeat="charge in charges" ng-click="gotToNextStep(charge.amount,charge.id)">
-                 <div class="row">
+                <a class="btn triple-button one-third-width {{ charge.class }}" ng-repeat="charge in charges" ng-click="gotToNextStep(charge.amount,charge.id)">
+                    <div class="row">
                         <div class="circle-bg">
                             <text x="40%" y="65%" fill="white">
                                 <tspan class="time">
@@ -46,15 +46,16 @@
                         </div>
                     </div>
                     <div class="row late-charge">
-                    <span class="for">for</span><br/>
-                    <span class="amount">{{currencySymbol}}{{charge.amount| number:0}}</span>
-                </div>
-             </a>
+                        <span class="for">for</span>
+                        <br/>
+                        <span class="amount">{{currencySymbol}}{{charge.amount| number:0}}</span>
+                    </div>
+                </a>
             </div>
             <div class=" row margin-top-10">
-             <a class="no-thanks" ui-sref="checkOutOptions">No, thank you.</a>
+                <a class="no-thanks" ui-sref="checkOutOptions">No, thank you.</a>
             </div>
-        </div>  
-        <div class="col-md-3"></div>               
+        </div>
+        <div class="col-md-3"></div>
     </div>
 </div>
