--- a/guestweb/common_templates/partials/public_ny_v2/gwMobielNUmberOptions.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwMobielNUmberOptions.html
@@ -18,7 +18,7 @@
             </div>
             <!--  submit button-->
             <a class="btn btn-template" ng-click="changeNumber()">Yes</a>
-            <a class="btn btn-template  margin-top-10 grey-btn" ng-click="skip()"> NO</a>
+            <a class="btn btn-template  margin-top-10" ng-click="skip()"> NO</a>
         </div>
         <div class="col-md-3">
         </div>
