--- a/guestweb/common_templates/partials/public_ny_v2/gwPhoneNumberUpdate.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwPhoneNumberUpdate.html
@@ -49,7 +49,7 @@
                 </div>
                 <!--  submit button-->
                 <input type="submit" class="btn btn-template" ng-click="mobileSubmitted()" value="Continue" />
-                <a class="btn btn-template  margin-top-10 grey-btn" ng-click="continueClicked()"> Skip</a>
+                <a class="btn btn-template  margin-top-10" ng-click="continueClicked()"> Skip</a>
             </form>
         </div>
         <div class="col-md-3">
@@ -64,7 +64,7 @@
                 <p class="sub-main-text"> We updated your Guest profile to include this mobile phone number : {{dial}}-{{guestDetails.mobile}}</p>
             </div>
             <a class="btn btn-template margin-top-10" ng-click="continueClicked()">Continue</a>
-            <a class="btn btn-template margin-top-10 grey-btn" ng-click="changeMobile()"> Change Mobile  Number</a>
+            <a class="btn btn-template margin-top-10" ng-click="changeMobile()"> Change Mobile  Number</a>
         </div>
         <div class="col-md-3">
         </div>
