--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -253,7 +253,15 @@ textarea{
 .amount {
     font-family: "Gotham Book"
 }
-
+.pickadate-main ul:first-child{
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+    margin: 0 4px; 
+}
+.pickadate-main ul:nth-child(2){
+    margin-top:30px;
+}
+  
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
     color: #000;
     color: transparent;
@@ -263,18 +271,8 @@ textarea{
 .pickadate-centered-heading {
     color: #000;
 }
-
-.pickadate-cell .pickadate-active {
-    background-color: #000 !important;
-    color: #fff;
-}
-
-.pickadate-head {
-    color: #000000;
-}
-
-.calendar-selection {
-    color: #fff;
+.pickadate-head, .calendar-selection, .pickadate-cell .pickadate-active {
+    color: #000 !important;
 }
 
 .pickadate-cell li:nth-child(1),
@@ -289,7 +287,7 @@ textarea{
 .pickadate-cell .pickadate-disabled,
 .pickadate-cell .pickadate-enabled,
 .pickadate-cell .pickadate-outofrange-disabled {
-    background-color: #EEEBE8;
+    background-color: #fff;
 }
 
 .pickadate-cell .pickadate-disabled,
@@ -307,15 +305,16 @@ textarea{
 }
 
 .date-picker-header {
-    background-color: #000;
+    background-color: #fff;
+    color:#000;
 }
 
 .calendar-back {
-    background-image: url('/assets/guestweb/common_images/back_icon.png');
+    background-image: url('/assets/guestweb/common_images/black/back_icon.png');
 }
 
 .calendar-done {
-    background-image: url('/assets/guestweb/common_images/done_white.png');
+    background-image: url('/assets/guestweb/common_images/black/done_black.png');
 }
 
 .pickadate-prev,
@@ -323,6 +322,19 @@ textarea{
 .pickadate-prev:hover,
 .pickadate-next:hover {
     color: #000;
+}
+.pickadate-cell li:nth-child(7n+0),
+.pickadate-cell li:nth-child(1), 
+.pickadate-cell li:nth-child(15), 
+.pickadate-cell li:nth-child(22), 
+.pickadate-cell li:nth-child(29), 
+.pickadate-cell li:nth-child(36), 
+.pickadate-cell li:nth-child(8){
+    border-right:none;
+}
+.pickadate-cell .pickadate-active {
+    border:1px solid black !important;
+    background-color: #fff !important;
 }
 
 .date-picker-wrap {
@@ -342,7 +354,7 @@ textarea{
 }
 
 .date-text {
-    color: #fff;
+    color: #000;
 }
 
 .res-details-heading,
