CICO-40665 calendar style fix

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -259,7 +259,7 @@ textarea{
     margin: 0 4px; 
 }
 .pickadate-main ul:nth-child(2){
-    margin-top:30px;
+    margin:30px 6px 0px;
 }
   
 .pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
