CICO-40665 minor fix

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -98,6 +98,11 @@ a:hover,
     color:#000 !important;
     background:#fff !important;   
 }
+
+.room-error-green-button, .room-error-green-button:hover, .btn-close, .btn-close :hover{
+    color:#000 !important;
+    background:#fff !important;  
+}
 textarea{
     border: 1px solid black;  
 }
