CICO-40665 minor fix

--- a/guestweb/common_templates/partials/public_ny_v2/gwRoomUpgrades.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwRoomUpgrades.html
@@ -34,7 +34,7 @@
                     <carousel>
                         <slide ng-repeat="slide in slides" active="slide.active">
                             <div class="centeralign">
-                                <img ng-src="{{(slide.room_type_image.length > 0) ? slide.room_type_image : 'room-image.png'}}" err-Src="/assets/guestweb/img/image_not_available.png" style="height:200px;width:100%;" />
+                                <img ng-src="{{(slide.room_type_image.length > 0) ? slide.room_type_image : 'room-image.png'}}" err-Src="/assets/guestweb/img/image_not_available.png" style="width:100%;" />
                             </div>
                             <div class="upgrade-details" style="overflow: hidden">
                                 <div class="col-xs-9 room-info mob-paddding-top-5">
