--- a/guestweb/common_templates/partials/public_ny_v2/gwRoomUpgrades.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwRoomUpgrades.html
@@ -27,7 +27,7 @@
     <div class="row" ng-hide="isFetching || netWorkError">
         <div class="col-md-4"></div>
         <div class="col-md-4 top-spacing mob-margin-top-1">
-            <p class="main-text mob-margin-bottom-3">WANT TO UPGRADE</p>
+            <p class="main-text mob-margin-bottom-3">WANT TO UPGRADE?</p>
             <div class="section-container">
                 <div class="carousel-view">
                     <carousel>
