CICO-40665 minor fix

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -67,7 +67,7 @@ a:hover,
 .main-text {
     font-size: 30px;
 }
-.sub-main-text, .sub-text, .footer-text {
+.sub-main-text, .sub-text, .footer-text ,.select-style select,.input-field{
     font-size:16px !important;
 }
 .header-bar {
