CICO-40665 minor fix

--- a/guestweb/common_css/public_ny_v2/theme.less
+++ b/guestweb/common_css/public_ny_v2/theme.less
@@ -151,6 +151,9 @@ textarea{
 .select-style, text-comment {
     border: 1px solid black !important;
 }
+.select-style{
+    background: url(/assets/guestweb/common_images/arrow_down.gif) 95% 50% no-repeat #fff;
+}
 
 .dual-button {
     font-size: 22px;
