CICO-40524 updates editable text directive and some public theme changes

--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -59,6 +59,9 @@
 	    position: absolute !important;
 	    top: 75px !important;
 	}
+	.terms-content {
+		padding-top: 12%;
+	}
 	.action{
 		button{
 		    background: white !important;
