CICO-40524 fix some buttons in public v2 theme

--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -71,7 +71,10 @@
 		    border-radius: 0em !important;
 		}
 	}
-
+	.room-upsell-content {
+		height: 95%;
+    	padding-top: 7.5%;
+	}
 	.add_remove, .make-key-now{
 	    background: white !important;
 	    color: black !important;
