--- a/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwCheckinDetails.html
@@ -15,7 +15,7 @@
                 YOUR STAY
             </p>
             <p class="main-text mob-margin-bottom-3" ng-show="ShowupgradedLabel">
-                YOUR NEW STAY DETAILS
+                YOUR NEW STAY
             </p>
             <div class="margin-top-40 mob-padding-bottom-3 bottom-border">
                 <div class="row">
