--- a/guestweb/common_templates/partials/public_ny_v2/gwNewPrecheckinFinal.html
+++ b/guestweb/common_templates/partials/public_ny_v2/gwNewPrecheckinFinal.html
@@ -29,7 +29,7 @@
         <div class="col-md-3"></div>
         <!-- left side -->
         <div class="col-md-6 top-spacing">
-            <p class="main-text final-text">CHECK-IN COMPLETE</p>
+            <p class="main-text final-text">CHECK-IN IS COMPLETE</p>
             <p class="sub-text">Reservation #:{{confirmationNumber}}</p>
             <br/>
             <br/>
