--- a/zest_station/css/themes/public_v2/theme.less
+++ b/zest_station/css/themes/public_v2/theme.less
@@ -271,3 +271,10 @@
 			}
 		}
 	}
+	
+	.icon-watch {
+		margin: 40px;
+	    width: 450% !important;
+	    height: 450% !important;
+	    margin-top: 27px !important;
+	}
