CICO-40732 fixes translated language text from affecting button style, text now makes the buttons expand

--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -98,6 +98,8 @@ select {
         width: 50%;
         margin: 0 auto; 
     }
+    display: table;
+    width: 100%
 }
 
 .entry {
@@ -125,7 +127,8 @@ select {
     &.input { 
         position: relative;
         margin-right: 10px;
-        #calc > #width > .remove(85%, 10px);
+        display:table-cell;
+        width: 100%;
 
         .icons {
             position: absolute;
@@ -193,7 +196,8 @@ select {
     }
 
     &.action {
-        width: 15%;
+        display:table-cell;
+        padding-left: 10px;
     }
 }
 
