--- a/guestweb/common_templates/partials/MGM/gwCheckinDetails.html
+++ b/guestweb/common_templates/partials/MGM/gwCheckinDetails.html
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row margin-top-20 mob-margin-top-3">
+            <div class="row margin-top-20">
                 <div class="col-xs-12 left-align">
                     <div class="res-details-heading">
                         ROOM TYPE <span class="upgrades-label" ng-show="ShowupgradedLabel">UPGRADED!</span>
