CICO-39126 mnor change

--- a/guestweb/common_templates/partials/MGM/GrandDetroit/gwLateCheckoutfinal.html
+++ b/guestweb/common_templates/partials/MGM/GrandDetroit/gwLateCheckoutfinal.html
@@ -35,9 +35,9 @@
 	        </p>
 	       <p class="sub-main-text">Late Check Out ({{ lateCheckOut.time }} {{ lateCheckOut.ap }} ) .... {{currencySymbol}}{{ lateCheckOut.amount }}
            </p>
-          <!--  <p class="sub-main-text">
+          <p class="sub-main-text">
             <em>{{keyExpiry}}</em>
-           </p> -->
+           </p>
         </div>
         <div class="col-md-1"></div>
         <!-- right side -->
