--- a/guestweb/common_css/grand_detroit/theme.less
+++ b/guestweb/common_css/grand_detroit/theme.less
@@ -155,8 +155,12 @@ a,a:hover{
 }
 
 @media (max-width: 480px) {
+    .logo-image {
+      max-width: 200px;
+    }
     .back-to-checkout{ 
       background-position: 0px 26px;
       height: 53px;
+      margin-left: 18px;
     }
 }
